@@ -15,7 +15,7 @@ depcomp
 follow
 install-sh
 missing
-movie
+movie_play
 muc
 powwow
 powwow.6
